k8/gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-rest-api-358
  namespace: my-rest-api
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: my-rest-api-358
    app.kubernetes.io/component: my-rest-api-358
    app.kubernetes.io/instance: my-rest-api-358
    app.kubernetes.io/name: my-rest-api-358
    app.kubernetes.io/part-of: my-rest-api-358
    backstage.io/kubernetes-id: my-rest-api-358
spec:
  ports:
  - name: 8000-tcp
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: my-rest-api-358
    deployment: my-rest-api-358
