k8/gitops/eventlistener-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: el-my-rest-api-358-listener
  namespace: my-rest-api
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: el-my-rest-api-358-listener
    weight: 100
