k8/gitops/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: my-rest-api-358
  namespace: my-rest-api
  name: my-rest-api-358
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  hostnames:
    - my-rest-api-358.demo.leonlevy.lol
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: prod-gateway
      namespace: ingress-gateway
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: my-rest-api-358
          port: 8000
          weight: 1
      matches:
        - path:
            type: Exact
            value: /health
        - path:
            type: PathPrefix
            value: /api/v1/
        - path:
            type: PathPrefix
            value: /docs
        - path:
            type: Exact
            value: /openapi.json
